Update branding and content in index.html

--- a/index.html
+++ b/index.html
@@ -22,33 +22,34 @@
 
     <nav>
       <div class="logo">
-        <img src="logo.png" alt="LUSTRE Logo">
+        <a href="index.html"><img src="logo.png" alt="LUSTRE Logo"></a>
       </div>
       <div class="nav-links">
         <span>Work</span>
         <span>Profile</span>
         <span>Contact</span>
+        <a href="login.html" class="nav-item">Login</a>
+        <a href="signup.html" class="action-btn">Sign Up</a>
       </div>
     </nav>
 
     <section class="hero">
       <div class="hero-content">
-        <div class="hero-badge">GRAPHIC DESIGNER</div>
-        <h1 class="glitch-text">VISUAL<br>SYSTEMS<br>& IDENTITY.</h1>
+        <div class="hero-badge">Community<br></div>
+        <h1 class="glitch-text">THE VISUAL<br> COLLECTIVE</h1>
         <p class="hero-sub">
-          Crafting futuristic branding, print layouts, and digital art. 
-          Specializing in Adobe Creative Suite.
+          Join a global collective of visionaries crafting the future of branding, print, and digital art, powered by shared resources and the Adobe Creative Suite.
         </p>
         
         <div class="gbuttons">
-          <button type="button" class="save">VIEW PORTFOLIO</button>
+          <button type="button" class="save">Get Started</button>
         </div>
       </div>
     </section>
 
     <section class="gallery">
       <div class="section-header">
-        <h2>SOME OF MY BEST WORKS</h2>
+        <h2>FEATURED WORKS</h2>
         <div class="line"></div>
       </div>
 
@@ -100,7 +101,7 @@
     </section>
 
     <footer>
-      <p>© 2026 LUSTRE. Designed in Bohol.</p>
+      <p>© 2026 BEYOND. Designed in Bohol.</p>
     </footer>
 
     <script src="script.js"></script>
