Change title and update signup button to link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BEYOND | The Visual Collective. </title>
+    <title>LUSTRE | Design Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Open+Sauce+One:wght@300;700&display=swap" rel="stylesheet">
@@ -29,7 +29,6 @@
         <span>Profile</span>
         <span>Contact</span>
         <a href="login.html" class="nav-item">Login</a>
-        <a href="signup.html" class="action-btn">Sign Up</a>
       </div>
     </nav>
 
@@ -42,7 +41,7 @@
         </p>
         
         <div class="gbuttons">
-          <button type="button" class="save">Get Started</button>
+          <a href="signup.html" class="save" style="display: inline-block; text-decoration: none;">Get Started</a>
         </div>
       </div>
     </section>
