Replace button with link for initialization action

--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
 
           <a href="#" class="forgot-password">Forgot Password?</a>
 
-          <button type="button" class="save" style="width: 100%; border-radius: 2px;">INITIALIZE</button>
+          <a href="profile.html" class="save" style="width: 100%; border-radius: 2px; display: block; text-align: center; text-decoration: none;">INITIALIZE</a>
         </form>
 
         <div class="auth-footer">
