--- a/signup.html
+++ b/signup.html
@@ -56,7 +56,7 @@
             <input type="password" id="confirm-password" placeholder="••••••••">
           </div>
 
-          <button type="button" class="save" style="width: 100%; margin-top: 20px; border-radius: 2px;">ESTABLISH LINK</button>
+          <a href="profile.html" class="save" style="width: 100%; margin-top: 20px; border-radius: 2px; display: block; text-align: center; text-decoration: none;">ESTABLISH LINK</a>
         </form>
 
         <div class="auth-footer">
